This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _testbuffer.get_contiguous() doesn't check input arguments
Type: behavior Stage: resolved
Components: Library (Lib) Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: python-dev, skrah, vstinner
Priority: normal Keywords: patch

Created on 2012-08-23 08:07 by vstinner, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
_testbuffer.patch vstinner, 2012-08-23 08:07 review
Messages (3)
msg168928 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2012-08-23 08:07
_testbuffer.get_contiguous() abort with an assertion error if it gets invalid arguments. Attached patch adds tests for valid values.

I found this bug using my fuzzer (fusil).
msg168942 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-23 13:58
New changeset fa745ed89b7a by Stefan Krah in branch 'default':
Issue #15770: Check invalid arguments in test function. Patch by Victor Stinner.
http://hg.python.org/cpython/rev/fa745ed89b7a
msg168943 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-23 13:59
Thanks, fixed.
History
Date User Action Args
2022-04-11 14:57:35adminsetgithub: 59974
2012-08-23 13:59:47skrahsetstatus: open -> closed
type: behavior
messages: + msg168943

resolution: fixed
stage: resolved
2012-08-23 13:58:42python-devsetnosy: + python-dev
messages: + msg168942
2012-08-23 08:07:37vstinnercreate