Issue #15770: Check invalid arguments in test function. Patch by Victor Stinner.